--- a/TS.tex
+++ b/TS.tex
@@ -193,6 +193,11 @@ $B$ is denoted by
 d(A,B)=\inf \{d(x,y) \ | \ x \in A, y \in B\}
 \end{equation}
 
-thaks for your help
+\subsection{Open set, Closed Set}
+\begin{definition1}{Open Set}{tag}
+A subset $O$ of a distance space $X$ is an open set if and only if $\varepsilon$-neighbourhood of $x$ is in $O$ for any arbitrary point $x \in O$.
 
+Thus,
+\forall x \in O, \exists \varepsilon > 0, U_{\varepsilon} \subset O
+\end{definition1} 
 \end{document}
